--- a/ex03.html
+++ b/ex03.html
@@ -20,6 +20,7 @@
     <p>Já me livrei da maldição</p>
     <p>Já me livrei da maldição</p>
     <p>Já me livrei da maldição</p>
+    <p>Já me livrei da maldição</p>
     <script>
         var n1 = Number(window.prompt('Digite numero'))
         var n2 = Number(window.prompt('digite outro numero'))
