--- a/Aula06/ex03.html
+++ b/Aula06/ex03.html
@@ -18,11 +18,15 @@
 <body>
     <h1>Olá mundo!</h1>
     <p>Já me livrei da maldição</p>
+    <p>Já me livrei da maldição</p>
+    <p>Já me livrei da maldição</p>
+    <p>Já me livrei da maldição</p>
+    <p>Já me livrei da maldição</p>
     <script>
         var n1 = Number(window.prompt('Digite numero'))
         var n2 = Number(window.prompt('digite outro numero'))
         var s = n1 + n2
-        window.alert(`A soma dos entre ${n1} e ${n2} é igual à ${s}´)
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
     </script>
 </body>
 </html>
