--- a/Desafios/d05.html
+++ b/Desafios/d05.html
@@ -18,8 +18,8 @@
             var m = Number(n);
 
             var res = document.getElementById('res')
-            
-            res.innerHTML = `<h1> A distância de ${m} metros, corresponde a....</h1>${1000 * m} quilômetros<b>(km)</b>.<br>${m * 100} dectâmetro<b>(Hm)</b>.<br> ${m * 10} decâmetro<b>(Dam)</b>.<br> ${m / 10} decímetro<b>(dm)</b>.<br> ${m / 100} centímetro<b>(Cm)</b>.<br> ${m / 1000} mílimetro<b>(mm)</b>. `
+
+            res.innerHTML = `<h1> A distância de ${m} metros, corresponde a....</h1>${1000 * m} quilômetros<b>(km)</b>.<br>${100 * m} dectâmetro<b>(Hm)</b>.<br> ${m * 10} decâmetro<b>(Dam)</b>.<br> ${m / 10} decímetro<b>(dm)</b>.<br> ${m / 100} centímetro<b>(Cm)</b>.<br> ${m / 1000} mílimetro<b>(mm)</b>. `
         }
     </script>
 </body>
