--- a/Aula12ex/ex014/modelo.html
+++ b/Aula12ex/ex014/modelo.html
@@ -9,17 +9,17 @@
 <body onload="carregar()">
 
     <header>
-        <h1>Title</h1>
+        <h1>Hora do dia</h1>
     </header>
 
     <section>
 
         <div id="msg">
-            Aqui vai aparecer a mensagem...
-            <div id="foto">
-                <img id="ft" src="dia.png" alt="Foto do dia">
-            </div>
-
+            Aqui vai aparecer a mensagem...            
+        </div>
+        
+        <div id="foto">
+            <img id="ft" src="dia.png" alt="Foto do dia" style="width: 250px;">
         </div>
 
     </section>
